--- a/analysis/MiscResults.tex
+++ b/analysis/MiscResults.tex
@@ -327,6 +327,7 @@
 
 \section{Network Error Performance: Training and Testing Results}
 
+\subsection{Training Loss Curves}
 
 \begin{figure}[H]
 	\subfigure[ECNN-15by2]{\includegraphics[width = 0.48\textwidth]{ecnn15by2}}
@@ -339,6 +340,9 @@
 	%\subfigure[h]{\includegraphics[width = 0.48\textwidth]{M2_data_driven_errbysize_h_new.eps}}
 \end{figure}
 
+
+\subsection{Train and Test Error Performance}
+
 \begin{table}[H]
 
 \begin{tabular}{lrrrrrrr}
@@ -349,17 +353,9 @@
 	L1\_S15x2  & 5.26e+02 & 2.90e-01 & 3.34e-01 & 3.35e-01 & 3.33e-01 &    1.75e-01 &    0.00e+00 \\
 	L1\_S15x5  & 1.25e+03 & 2.94e-01 & 3.39e-01 & 3.39e-01 & 3.38e-01 &    7.13e-02 &    0.00e+00 \\
 	L1\_S15x10 & 2.45e+03 & 4.31e-01 & 3.18e-01 & 3.24e-01 & 3.10e-01 &    3.83e-01 &    5.20e+03 \\
-	L1\_S20x2  & 9.01e+02 & 1.10e+00 & 5.60e+01 & 7.66e+01 & 6.75e+00 &    1.05e+00 &    6.00e+02 \\
-	L1\_S20x5  & 2.16e+03 & 8.05e-01 & 1.77e+01 & 2.35e+01 & 6.57e+00 &    1.02e+00 &    0.00e+00 \\
-	L1\_S20x10 & 4.26e+03 & 1.69e+00 & 7.63e-01 & 5.30e-01 & 9.62e-01 &    1.01e+00 &    3.63e+04 \\
-	L1\_S30x2  & 1.95e+03 & 1.53e+00 & 2.90e+00 & 3.32e+00 & 2.33e+00 &    1.02e+00 &    5.05e+04 \\
-	L1\_S30x5  & 4.74e+03 & 2.50e+00 & 8.56e-01 & 8.30e-02 & 1.25e+00 &    1.01e+00 &    1.00e+05 \\
-	L1\_S30x10 & 9.39e+03 & 4.09e+00 & 9.63e-01 & 8.15e-01 & 1.11e+00 &    9.94e-01 &    1.00e+05 \\
 	\bottomrule
 \end{tabular}
-\caption{ECNN - 2D-Test Data Error Summary}
 \end{table}
-
 
 \begin{table}[H]
 \begin{tabular}{lrrrrrrr}
@@ -370,12 +366,6 @@
 	L1\_S15x2  & 5.26e+02 & 2.90e-01 & 3.34e-01 & 3.35e-01 & 3.33e-01 &    1.73e-01 &    0.00e+00 \\
 	L1\_S15x5  & 1.25e+03 & 2.94e-01 & 3.39e-01 & 3.39e-01 & 3.38e-01 &    7.05e-02 &    0.00e+00 \\
 	L1\_S15x10 & 2.45e+03 & 4.31e-01 & 3.18e-01 & 3.24e-01 & 3.10e-01 &    3.80e-01 &    5.21e+02 \\
-	L1\_S20x2  & 9.01e+02 & 1.10e+00 & 5.60e+01 & 7.66e+01 & 6.75e+00 &    1.04e+00 &    5.80e+01 \\
-	L1\_S20x5  & 2.16e+03 & 8.05e-01 & 1.77e+01 & 2.35e+01 & 6.57e+00 &    1.02e+00 &    0.00e+00 \\
-	L1\_S20x10 & 4.26e+03 & 1.69e+00 & 7.63e-01 & 5.30e-01 & 9.62e-01 &    9.96e-01 &    3.63e+03 \\
-	L1\_S30x2  & 1.95e+03 & 1.53e+00 & 2.90e+00 & 3.32e+00 & 2.33e+00 &    1.01e+00 &    5.05e+03 \\
-	L1\_S30x5  & 4.74e+03 & 2.50e+00 & 8.55e-01 & 8.30e-02 & 1.25e+00 &    1.00e+00 &    1.00e+04 \\
-	L1\_S30x10 & 9.39e+03 & 4.09e+00 & 9.63e-01 & 8.15e-01 & 1.11e+00 &    9.85e-01 &    1.00e+04 \\
 	\bottomrule
 \end{tabular}
 
@@ -383,20 +373,14 @@
 \end{table}
 
 \begin{table}[H]
- \begin{tabular}{lrrrrrrr}
+\begin{tabular}{lrrrrrrr}
 	\toprule
 	{} &     Size &   RMSE h &   RMSE u &  RMSE u0 &  RMSE u1 &  RMSE alpha &  Num NegDef \\
 	NetID     &          &          &          &          &          &             &             \\
 	\midrule
-	L1\_S15x2  & 5.00e+00 & 7.14e-01 & 5.36e-01 & 4.38e-08 & 7.83e-01 &    9.93e-01 &    0.00e+00 \\
-	L1\_S15x5  & 5.00e+00 & 6.49e-01 & 4.74e-01 & 4.64e-08 & 6.93e-01 &    9.89e-01 &    0.00e+00 \\
-	L1\_S15x10 & 5.00e+00 & 4.54e-01 & 1.45e-01 & 7.79e-08 & 2.11e-01 &    9.30e-01 &    0.00e+00 \\
-	L1\_S20x2  & 5.00e+00 & 9.43e-01 & 6.10e-01 & 4.22e-08 & 8.91e-01 &    9.97e-01 &    0.00e+00 \\
-	L1\_S20x5  & 5.00e+00 & 1.12e+00 & 7.28e-01 & 4.41e-08 & 1.06e+00 &    1.00e+00 &    0.00e+00 \\
-	L1\_S20x10 & 5.00e+00 & 6.69e+00 & 1.18e+00 & 1.02e-07 & 1.72e+00 &    1.03e+00 &    0.00e+00 \\
-	L1\_S30x2  & 5.00e+00 & 1.47e+00 & 7.96e-01 & 4.71e-08 & 1.16e+00 &    1.00e+00 &    0.00e+00 \\
-	L1\_S30x5  & 5.00e+00 & 2.97e+00 & 7.44e-01 & 4.08e-08 & 1.09e+00 &    1.00e+00 &    0.00e+00 \\
-	L1\_S30x10 & 5.00e+00 & 1.98e+00 & 6.65e-01 & 4.73e-08 & 9.71e-01 &    9.98e-01 &    0.00e+00 \\
+	L1\_S15x2  & 5.30e+02 & 7.14e-01 & 5.36e-01 & 4.38e-08 & 7.83e-01 &    9.93e-01 &    0.00e+00 \\
+	L1\_S15x5  & 1.25e+03 & 6.49e-01 & 4.74e-01 & 4.64e-08 & 6.93e-01 &    9.89e-01 &    0.00e+00 \\
+	L1\_S15x10 & 2.46e+03 & 4.54e-01 & 1.45e-01 & 7.79e-08 & 2.11e-01 &    9.30e-01 &    0.00e+00 \\
 	\bottomrule
 \end{tabular}
 
@@ -410,15 +394,9 @@
 	{} &     Size &   RMSE h &   RMSE u &  RMSE u0 &  RMSE u1 &  RMSE alpha &  Num NegDef \\
 	NetID     &          &          &          &          &          &             &             \\
 	\midrule
-	L1\_S15x2  & 5.00e+00 & 7.14e-01 & 5.36e-01 & 4.47e-08 & 7.83e-01 &    9.85e-01 &    0.00e+00 \\
-	L1\_S15x5  & 5.00e+00 & 6.49e-01 & 4.74e-01 & 4.58e-08 & 6.93e-01 &    9.80e-01 &    0.00e+00 \\
-	L1\_S15x10 & 5.00e+00 & 4.54e-01 & 1.45e-01 & 7.59e-08 & 2.11e-01 &    9.21e-01 &    0.00e+00 \\
-	L1\_S20x2  & 5.00e+00 & 9.43e-01 & 6.10e-01 & 4.30e-08 & 8.91e-01 &    9.88e-01 &    0.00e+00 \\
-	L1\_S20x5  & 5.00e+00 & 1.12e+00 & 7.28e-01 & 4.38e-08 & 1.06e+00 &    9.95e-01 &    0.00e+00 \\
-	L1\_S20x10 & 5.00e+00 & 6.69e+00 & 1.18e+00 & 1.04e-07 & 1.72e+00 &    1.03e+00 &    0.00e+00 \\
-	L1\_S30x2  & 5.00e+00 & 1.47e+00 & 7.96e-01 & 4.71e-08 & 1.16e+00 &    9.96e-01 &    0.00e+00 \\
-	L1\_S30x5  & 5.00e+00 & 2.97e+00 & 7.44e-01 & 4.10e-08 & 1.09e+00 &    9.93e-01 &    0.00e+00 \\
-	L1\_S30x10 & 5.00e+00 & 1.98e+00 & 6.65e-01 & 4.74e-08 & 9.71e-01 &    9.90e-01 &    0.00e+00 \\
+	L1\_S15x2  & 5.30e+02 & 7.14e-01 & 5.36e-01 & 4.47e-08 & 7.83e-01 &    9.85e-01 &    0.00e+00 \\
+	L1\_S15x5  & 1.25e+03 & 6.49e-01 & 4.74e-01 & 4.58e-08 & 6.93e-01 &    9.80e-01 &    0.00e+00 \\
+	L1\_S15x10 & 2.46e+03 & 4.54e-01 & 1.45e-01 & 7.59e-08 & 2.11e-01 &    9.21e-01 &    0.00e+00 \\
 	\bottomrule
 \end{tabular}
 
